reverted previous commit

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+url: mafaldafalcaotvf.github.io
+
 facebook_username: mafaldafalcaotvf
 twitter_username: mafalda_falcao
 github_username: mafaldafalcaotvf
