--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: mafaldafalcaotvf.github.io
+url: mafaldafalcaotvf.github.com
 
 facebook_username: mafaldafalcaotvf
 twitter_username: mafalda_falcao
