--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,13 @@ title: "Mafalda Falcão Ferreira"
 url: mafaldafalcaotvf.github.com
 
 facebook_username: mafaldafalcaotvf
-twitter_username: mafalda_falcao
+twitter_username: mafaldaftvf
 github_username: mafaldafalcaotvf
 instagram_username: mafaldafalcaotvf
 px500_username: mafaldafalcaotvf
 linkedin_username: mafaldafalcaotvf
 
 copyright_note: "2017 by Mafalda Falcão Ferreira. All rights reserved."
+
+baseurl: ""
+url: "http://mafaldafalcao.eu"
