adding relevant academic links

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ github_username: mafaldafalcaotvf
 instagram_username: mafaldafalcaotvf
 px500_username: mafaldafalcaotvf
 linkedin_username: mafaldafalcaotvf
+scholar_username: FtvExWMAAAAJ
+orcid_username: 0000-0001-5371-0389
 
 copyright_note: "2017 by Mafalda Falcão Ferreira. All rights reserved."
 
